feat: 建置基礎頁面 & 路由

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,14 @@
 {
-  "language": "Language"
+  "admin": "Admin",
+  "confirmation": "Confirmation",
+  "index": "Index",
+  "language": "Language",
+  "login": "Login",
+  "reserve": "Reserve",
+  "room": "Room",
+  "rooms": "Rooms",
+  "signup": "Signup",
+  "user": "User",
+  "user-orders": "User Orders",
+  "room-id": "Room ID"
 }
